<resources>
    <string name="app_name">Avtomoy App</string>
    <string name="uregistrationString"><u>Регистрация</u> </string>
    <string name="registrationString">Регистрация </string>
    <string name="authstring">Авторизация</string>
    <string name="upasString"><u>Забыли пароль?</u></string>
    <string name="pasString">забыли пароль?</string>
    <string name="nextString">Далее</string>
    <string name="loginString">Логин</string>
    <string name="passwordString">Пароль</string>
    <string name="resetPasswordString">Восстановление пароля</string>
    <string name="e_mailString">E-mail</string>
    <string name="sendString">Отправить</string>
    <string name="repeatepassString">Повторите пароль</string>
    <string name="autocleancodeString">Код автомойки</string>
    <string name="_7_999_999_99_99">+7(999) 999-99-99</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="all"><u>смотреть всё</u></string>
    <string name="menu_home">Кабинет</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Настройки</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_auto_reg">AutoRegActivity</string>
    <string name="info">nav_info</string>
    <string name="menu_info">Об автомойке</string>
    <string name="menu_history">История</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_exit">Выход</string>
    <string name="best_carwash">Самая лушая автомойка</string>
    <string name="all_view"><u>смотреть все</u></string>
    <string name="show_on_map"><u>показать на карте</u></string>
    <string name="helpComplexString"><u>&#63; подробнее</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="agreement">1.1. Базовая версия сервиса Step-Car «Онлайн - запись на автомойку» (далее – «Сервис») предлагает Пользователю использовать Сервис для записи на автомойку.\n1.2. Сервис предоставляет возможность Пользователю ознакомиться с информацией об оказываемых зарегистрированными в Сервисе автомойками услугах и получить доступ к предложениям автомоек по предварительной записи на автомойку в соответствии с выбранными Пользователем параметрами. \n1.3. В процессе пользования Сервис передает Пользователю на бесплатной основе неисключительную простую лицензию на использование базовой версии Сервиса. Указанная лицензия передается Пользователю исключительно для использования в целях, указанных в п. 1.1 и 1.2. настоящих Условий, на территории Российской Федерации в течение срока пользования Сервисом. \n1.4. Информация об услугах, оказываемых автомойками, предоставлена автомойками. Сервис не несет ответственность за содержание и (или) актуальность информации, предоставленной автомойками, включая информацию о стоимости услуг, а также о возможности предварительной записи на автомойку. Сервис не вносит какие – либо изменения в информацию, предоставляемую автомойками и размещаемую ими в Сервисе. \n1.5. Автомойки, являющиеся партнерами Сервиса, и самостоятельными хозяйствующими субъектами, самостоятельно несут ответственность перед Пользователем за качество оказанных ими услуг. \n1.6. Взаимодействие Пользователя с автомойками по вопросам предварительной записи осуществляется Пользователем самостоятельно (без участия Сервиса) в соответствии с принятыми у автомоек Правилами оказания услуг. Сервис не несет отнесенность за любые операции, совершаемые Пользователем и автомойками в процессе предварительной записи на Автомойку. \n1.7.Настоящие Условия могут быть изменены Сервисом с уведомлением об этом Пользователей. Новая редакция Условий вступает в силу с момента ее размещения в Сервисе, если иное не предусмотрено новой редакцией Условий. В случае, если в настоящие Условия внесены какие-либо изменения, с которыми Пользователь не согласен, он обязан прекратить использование Сервиса. \n1.8. Регистрируясь в Сервисе и начиная использовать Сервис/его отдельные функции, Пользователь : \n1. подтверждает, что до начала выполнения действий по Регистрации в Сервисе ознакомился с настоящим соглашением, выражает полное и безоговорочное принятие его условий; \n2. подтверждает, что не заблуждается в понимании функций Сервиса и Условий его использования, мотивы и последствия регистрации в Сервисе ему понятны; \n3. дает согласие Сервису и автомойкам на обработку данных о государственном номере автомобиля Пользователя, а также номере телефона и адресе электронной почты Пользователя, на передачу указанных данных партнерам Сервиса, а также на обработку указанных данных партнерами Сервиса; \n4. дает согласие на получение от Сервиса и его партнёров, том числе посредством электронной почты, рекламно-информационных сообщений о продукции, услугах и мероприятиях, связанных с продуктами партнёров. \n5. подтверждает достоверность данных, указанных в пп.3 п.1.8. настоящих Условий. \n1.9. Сервис оставляет за собой право на свое усмотрение ограничить доступ Пользователя к Сервису (или к отдельным функциям Сервиса, если это возможно технологически) с использованием его учетной записи или полностью заблокировать учетную запись Пользователя при неоднократном нарушении настоящих Условий либо применить к Пользователю иные меры с целью соблюдения требований законодательства или прав и законных интересов третьих лиц.</string>
    <string name="police"><u>Прочитать политику конфиденциальности</u></string>

</resources>
