<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_white"
            android:icon="@drawable/carwash"
            android:title="@string/menu_home"
            android:visible="false"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/carwash"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <!--<item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat_bubbles_with_ellipsis"
            android:title="@string/menu_chat" />-->
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/two_settings_cogwheels"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/logout"
            android:title="@string/menu_exit" />
    </group>

</menu>
