<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.avtomoy.RegistryActivity">

    <ImageView
        android:id="@+id/logoImageViewRegistry"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/loginString"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/authTextViewRegistry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authTextViewRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/registrationString"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTextRegistry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailEditTextRegistry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/e_mailString"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditTextRegistry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneEditTextRegistry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/_7_999_999_99_99"
        android:importantForAutofill="no"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditTextRegistry"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/passwordString"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/phoneEditTextRegistry"
        app:layout_constraintStart_toStartOf="@+id/phoneEditTextRegistry"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditTextRegistry"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/admitPasswordEditTextRegistry"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/repeatepassString"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegistry"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegistry"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegistry"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editTextKeyAuto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="8"
        android:fontFamily="@font/roboto"
        android:hint="@string/autocleancodeString"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="@+id/admitPasswordEditTextRegistry"
        app:layout_constraintStart_toStartOf="@+id/admitPasswordEditTextRegistry"
        app:layout_constraintTop_toBottomOf="@+id/admitPasswordEditTextRegistry" />

    <Button
        android:id="@+id/nextButtonRegistry"
        android:layout_width="0dp"
        android:layout_height="70sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/projectOrange"
        android:fontFamily="@font/roboto"
        android:text="@string/nextString"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>